--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -351,8 +351,8 @@
 
                                 {% for file in files %}
                                     <div class="p-2 d-inline-block m-2 bg-grey2 rounded">
-                                        <a href="{{ file.getPublicPath() }}" target="_blank">
-                                            <img class="rounded" height="100" src="{{ file.getPublicPath() }}" alt="preview" data-toggle="tooltip" data-placement="top" title="{{ file.getName() }}" />
+                                        <a href="{{ file.getPublicPath('full') }}" target="_blank">
+                                            <img class="rounded" height="100" src="{{ file.getPublicPath('small') }}" alt="preview" data-toggle="tooltip" data-placement="top" title="{{ file.getName() }}" />
                                         </a>
                                         <div class="pt-2">
                                             <span class="d-inline-block text-small">{{ file.getSize() }}</span>
