--- a/theme/default/catalog.category.product.twig
+++ b/theme/default/catalog.category.product.twig
@@ -3,7 +3,7 @@
         <div class="pi-pic">
             {#<div class="tag-sale">ON SALE</div>#}
             <a href="/catalog/{{ categories.firstWhere('uuid', product.category).address }}/{{ product.address }}">
-                <img src="{{ files.firstWhere('item_uuid', product.uuid).getPublicPath() }}" alt="">
+                <img src="{{ files.firstWhere('item_uuid', product.uuid).getPublicPath('middle') }}" alt="">
             </a>
             <div class="pi-links">
                 <a href="#" class="add-card"><i class="flaticon-bag"></i><span>В корзину</span></a>
