fix file name and remove files when delete

--- a/src/Template/cup/task.twig
+++ b/src/Template/cup/task.twig
@@ -1,11 +1,13 @@
 <li data-task-list class="nav-item dropdown hidden-caret" style="display: none;">
     <a class="nav-link dropdown-toggle" href="#" id="notifDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <i class="fas fa-tasks"></i>
-        <span class="notification">8</span>
+        <span class="notification">0</span>
     </a>
     <ul class="dropdown-menu notif-box animated fadeIn" aria-labelledby="notifDropdown">
         <li>
-            <div class="dropdown-title">Фоновые задачи</div>
+            <div class="dropdown-title">
+                Фоновые задачи
+            </div>
         </li>
         <li>
             <div class="notif-scroll scrollbar-outer" style="overflow-y: scroll">
