--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -58,6 +58,7 @@
                 <nav class="navbar navbar-header navbar-expand-lg" data-background-color="blue2">
                     <div class="container-fluid">
                         <ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
+                            {% include 'cup/quickaction.twig' %}
                             {% include 'cup/trademaster.twig' %}
                             {% include 'cup/task.twig' %}
 
