--- a/src/Template/cup/trademaster.twig
+++ b/src/Template/cup/trademaster.twig
@@ -6,7 +6,7 @@
         <div class="dropdown-menu quick-actions quick-actions-info animated fadeIn">
             <div class="quick-actions-header">
                 <span class="title mb-1">TradeMaster</span>
-                <span class="subtitle op-8">Быстрые действия</span>
+                <span class="subtitle op-8">Управление интеграцией</span>
             </div>
             <div class="quick-actions-scroll scrollbar-outer">
                 <div class="quick-actions-items">
