change tm execute method add gmf #4

--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -548,7 +548,7 @@
                                 {% include 'cup/field.twig' with {
                                     'label': 'Описание магазина',
                                     'type': 'text',
-                                    'name': 'integration[merchant_shop_desc]'
+                                    'name': 'integration[merchant_shop_description]'
                                 } %}
 
                                 {% include 'cup/field.twig' with {
