--- a/src/Template/cup/trademaster.twig
+++ b/src/Template/cup/trademaster.twig
@@ -10,11 +10,11 @@
             </div>
             <div class="quick-actions-scroll scrollbar-outer">
                 <div class="quick-actions-items">
-                    <form action="/cup/trademaster" method="post" class="row m-0">
-                        <button type="submit" name="action" value="sync" class="col-12 col-md-12 p-0 btn btn-link">
+                    <form action="/cup/task/run" method="post" class="row m-0">
+                        <button type="submit" name="task" value="\App\Domain\Tasks\TradeMaster\CatalogSyncTask" class="col-12 col-md-12 p-0 btn btn-link">
                             <div class="quick-actions-item">
                                 <i class="fas fa-store"></i>
-                                <span class="text">Синхронизировать каталог</span>
+                                <span class="text">Обновить каталог</span>
                             </div>
                         </button>
                     </form>
