--- a/theme/default/guestbook.twig
+++ b/theme/default/guestbook.twig
@@ -13,12 +13,12 @@
                     <form method="post" class="contact-form">
                         <div class="row">
                             <div class="col-md-6">
-                                <input type="text" name="name" placeholder="Ваше имя">
-                                <input type="email" name="email" placeholder="Ваш E-Mail">
+                                <input type="text" name="name" placeholder="Ваше имя *" required>
+                                <input type="email" name="email" placeholder="Ваш E-Mail *" required>
                                 <button class="site-btn">Отправить отзыв</button>
                             </div>
                             <div class="col-md-6">
-                                <textarea name="message" placeholder="Ваше сообщение или отзыв или предложение или пожелание.."></textarea>
+                                <textarea name="message" placeholder="Ваше сообщение или отзыв или предложение или пожелание.. *" required></textarea>
                             </div>
                         </div>
                     </form>
