--- a/src/Template/layout.twig
+++ b/src/Template/layout.twig
@@ -9,6 +9,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="generator" content="OpenSource CMS (Full free for all) Powered by 0x12f Team" />
         <title>{% block title deferred %}{{ title }}{% endblock %}</title>
         {% block head '' %}
 
