--- a/theme/default/common/header.twig
+++ b/theme/default/common/header.twig
@@ -19,7 +19,7 @@
                         <div class="up-item">
                             <div class="shopping-card">
                                 <i class="flaticon-bag"></i>
-                                <span>0</span>
+                                <span class="simpleCart_quantity">0</span>
                             </div>
                             <a href="#/cart">Корзина</a>
                         </div>
