--- a/theme/default/main.twig
+++ b/theme/default/main.twig
@@ -35,6 +35,10 @@
     <script src="/js/jquery.zoom.min.js"></script>
     <script src="/js/jquery-ui.min.js"></script>
     <script src="/js/main.js"></script>
+
+    <script src="/assets/js/public/libs/sweetalert2.all.min.js"></script>
+    <script src="/assets/js/public/libs/simpleCart.min.js"></script>
+    <script src="/assets/js/public/script.js"></script>
 {% endblock %}
 
 {% block body %}
