--- a/theme/default/common/header.twig
+++ b/theme/default/common/header.twig
@@ -21,7 +21,7 @@
                                 <i class="flaticon-bag"></i>
                                 <span class="simpleCart_quantity">0</span>
                             </div>
-                            <a href="#/cart">Корзина</a>
+                            <a href="/cart">Корзина</a>
                         </div>
                     </div>
                 </div>
