--- a/public/css/style.css
+++ b/public/css/style.css
@@ -166,6 +166,11 @@ ol {
 	-webkit-box-shadow: inset 0 0 0 1px #111111;
 	box-shadow: inset 0 0 0 1px #111111;
 }
+.site-btn.site-btn-small {
+	width: auto;
+	min-width: 32px;
+	padding: 8px 0;
+}
 
 /* Preloder */
 
