--- a/theme/default/common/footer.twig
+++ b/theme/default/common/footer.twig
@@ -8,7 +8,7 @@
                     <p>
                         Это пример магазина, здесь может быть любой текст.
                     </p>
-                    <img src="img/cards.png" alt="">
+                    <img src="/img/cards.png" alt="">
                 </div>
             </div>
             <div class="col-lg-3 col-sm-6">
