safe exec and add version by commit id

--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -219,7 +219,7 @@
                                                     <table class="table table-properties">
                                                         <tr>
                                                             <th width="50%">Версия движка:</th>
-                                                            <td width="50%">0.1</td>
+                                                            <td width="50%">{{ properties.version }}</td>
                                                         </tr>
                                                         <tr>
                                                             <th width="50%">Операционная система:</th>
